# hello_llvm

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ReadMe.adoc
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: config_build_type.cmake
kaleidoscope/: CMakeLists.txt
kaleidoscope/include/kaleidoscope/: ast.hpp  lexer.hpp  parser.hpp
kaleidoscope/include/kaleidoscope/details/: KaleidoscopeJIT.hpp
kaleidoscope/src/: ast.cpp  lexer.cpp  parser.cpp
